--- a/serials.html
+++ b/serials.html
@@ -67,7 +67,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Ցիտադել</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                        <a href="view.html" class="btn btn-primary">Ավելին</a>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +81,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Ընտրյալները</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                        <a href="view.html" class="btn btn-primary">Ավելին</a>
                                     </div>
                                 </div>
                             </div>
@@ -95,7 +95,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Վենոմ</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                        <a href="view.html" class="btn btn-primary">Ավելին</a>
                                     </div>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title">Միսս Դեվիս</h5>
                                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed nisl sit amet felis ullamcorper iaculis. Nam quam mi, aliquet vitae feugiat a, mattis eget sapien. Proin venenatis metus at dolor luctus tincidunt. Aenean at erat eget augue accumsan tempor vitae quis justo. Duis fermentum ex sed egestas porta. Nullam et laoreet felis.</p>
-                                        <a href="#" class="btn btn-primary">Ավելին</a>
+                                        <a href="view.html" class="btn btn-primary">Ավելին</a>
                                     </div>
                                 </div>
                             </div>
