--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12  mt-3">
-                        <h1><a href="#"> IT Kino</a></h1>
+                        <h1><a href="index.html"> IT Kino</a></h1>
                         <p><small>Քո սիրելի ֆիլմերը մեզ մոտ</small></p>
                     </div>
                 </div>
@@ -61,11 +61,11 @@
                         <div class="mt-5"></div>
                         <form class="contact-form">
                             <div class="form-group">
-                                <label for="#name">Ձեր անունը</label>
+                                <label for="name">Ձեր անունը</label>
                                 <input type="text" name="name" class="form-control" id="name" required>
                             </div>
                             <div class="form-group">
-                                <label for="#email">էլ. հասցե</label>
+                                <label for="email">էլ. հասցե</label>
                                 <input type="email" name="email" class="form-control" id="email" required>
                             </div>
                             <div class="form-group">
