--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 mt-3">
-                        <h1><a href="#"> IT Kino</a></h1>
+                        <h1><a href="index.html"> IT Kino</a></h1>
                         <p><small>Քո սիրելի ֆիլմերը մեզ մոտ</small></p>
                     </div>
                 </div>
