--- a/view.html
+++ b/view.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12  mt-3">
-                        <h1><a href=""> IT Kino</a></h1>
+                        <h1><a href="index.html"> IT Kino</a></h1>
                         <p><small>Քո սիրելի ֆիլմերը մեզ մոտ</small></p>
                     </div>
                 </div>
@@ -67,12 +67,14 @@
                         <h2>Կարծիքներ</h2>
                         <div class="comments">
                             <div class="media">
-                                <img src="..." class="mr-3" alt="...">
+                                <a class="profile mr-3" href="#">
+                                    <img src="assets/img/profile1.jpg" class="w-100" alt="...">
+                                </a>
                                 <div class="media-body">
                                     <p>Standing on the frontline when the bombs start to fall. Heaven is jealous of our love, angels are crying from up above. Can't replace you with a million rings. Boy, when you're with me I'll give you a taste. There’s no going back. Before you met me I was alright but things were kinda heavy. Heavy is the head that wears the crown.</p>
                                     <div class="media mt-3">
-                                        <a class="mr-3" href="#">
-                                            <img src="..." alt="...">
+                                        <a class="profile mr-3" href="#">
+                                            <img src="assets/img/profile2.jpg" class="w-100" alt="...">
                                         </a>
                                         <div class="media-body">
                                             <p>Greetings loved ones let's take a journey. Yes, we make angels cry, raining down on earth from up above. Give you something good to celebrate. I used to bite my tongue and hold my breath. I'm ma get your heart racing in my skin-tight jeans. As I march alone to a different beat. Summer after high school when we first met. You're so hypnotizing, could you be the devil? Could you be an angel? It's time to bring out the big balloons. Thought that I was the exception. Bikinis, zucchinis, Martinis, no weenies.</p>
